Change /media/lcations to /media and replace Location model with MediaFileDto
